--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,39 @@
+# Temporary files generated during runtime or builds
 /tmp
 /out-tsc
 
-/node_modules
+# Compiled output
+dist/
+out/
+build/
+
+# Logs
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-/.pnp
-.pnp.js
 
-.vscode/*
+# dotenv files
+.env
+.env.*.local
+
+# Playwright reports
+playwright-report/
+test-results/
+
+# OS-specific files
+.DS_Store
+Thumbs.db
+
+# IDEs
+.idea/
+.vscode/
+
+# Git
+.git/
+
+# Coverage
+coverage/
+
+# Misc
+*.tgz
+*.log
